Adding the 'No Bell' and 'No Startup Message' Options

--- a/.screenrc
+++ b/.screenrc
@@ -29,3 +29,11 @@ hardstatus string '%{= Kd} %{= Kd}%-w%{= Kr}[%{= KW}%n %t%{= Kr}]%{= Kd}%+w %-= 
 #bind f eval "hardstatus ignore"
 # Show hardstatus: ctrl-a F
 #bind F eval "hardstatus alwayslastline"
+
+#Prevent the annoying flashing terminal
+vbell on
+vbell_msg ''
+termcapinfo *  vb=:
+
+#disable the startup message
+startup_message off
